--- a/step.yml
+++ b/step.yml
@@ -1,28 +1,17 @@
-title: "STEP TEMPLATE"
+title: "Appium Pytest-BDD Test Packager"
 summary: A short summary of the step. Don't make it too long ;)
 description: |-
-  This is a Step template.
-  Contains everything what's required for a valid Stepman managed step.
-
-  A Step's description (and generally any `description` property)
-  can be a [Markdown](https://en.wikipedia.org/wiki/Markdown) formatted text.
-
-  To create your own Step:
-
-  1. Create a new repository on GitHub
-  2. Copy the files from this folder into your repository
-  3. That's all, you can use it on your own machine
-  4. Once you're happy with it you can share it with others.
-website: https://github.com/...
-source_code_url: https://github.com/...
-support_url: https://github.com/.../issues
+  This bitrise step is designed to package impa into a form usable by AWS device farm.
+website: https://github.com/peartherapeutics/bitrise-aws-device-farm-test-packager
+source_code_url: https://github.com/peartherapeutics/bitrise-aws-device-farm-test-packager
+support_url: https://github.com/peartherapeutics/bitrise-aws-device-farm-test-packager/issues
 host_os_tags:
   - osx-10.10
   - linux
 project_type_tags:
 type_tags:
   - script
-is_requires_admin_user: true
+is_requires_admin_user: false
 is_always_run: false
 is_skippable: false
 run_if: ""
@@ -32,15 +21,3 @@ inputs:
       title: "Test Package Name"
       summary: Name of zip file to create.
       is_required: true
-outputs:
-  - EXAMPLE_STEP_OUTPUT:
-    opts:
-      title: "Example Step Output"
-      summary: Summary. No more than 2-3 sentences.
-      description: |
-        Description of this output.
-
-        Can be Markdown formatted text.
-      is_expand: false
-      is_required: true
-      is_dont_change_value: true
